--- a/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1114,7 +1114,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/StarterContent/Props
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
